--- a/_includes/gitment.html
+++ b/_includes/gitment.html
@@ -4,7 +4,7 @@
 <script src="//imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '{{page.url|split: "/"|last|downcase}}', // 页面ID，可选。默认为 location.href
+  id: '{{ page.url | replace:'index.html','' |split: "/" | last|downcase }}', // 页面ID，可选。默认为 location.href
   owner: '{{site.github_username}}', //你的 Github ID
   repo: '{{site.repo_for_gitment}}', // 存储评论的 repo
   title: '{{page.title}}',//issue页的标题
