--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ layout: default
                     {% comment %} if page.subtitle {% endcomment %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% comment %} endif {% endcomment %}
-                    <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}; <span data-hk-page="current"> - </span> views</span>
+                    <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}{% if site.hit-kounter %}; <span data-hk-page="current"> - </span> views</span>{% endif %}
                 </div>
             </div>
         </div>
@@ -66,7 +66,7 @@ layout: default
 				/
 				<time>{{ page.date | date:"%Y-%m-%d" }}</time>
 				<style>span.test {color: #0085A5;font-weight: bold;}</style>
-				</span>/&nbsp;<span data-hk-page="current" class="test"> - </span>&nbsp;views
+				</span>{% if site.hit-kounter %}/&nbsp;<span data-hk-page="current" class="test"> - </span>&nbsp;views{% endif %}
                 <br>
 				<span><strong><em>Published under <a href="//creativecommons.org/licenses/by-nc-sa/4.0/">(CC) BY-NC-SA 4.0</a></em></strong>
 				</span>
@@ -238,12 +238,11 @@ layout: default
     }
 </style>
 {% endif %}
+
 {% if page.mathjax %}
 <!-- mathjax, Doc: http://docs.mathjax.org/en/latest/start.html -->
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
 </script>
-<script type="text/javascript" async
-  src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
-</script>
+<script type="text/javascript" async src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 {% endif %}
