--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,10 @@
 <head>
     <meta charset="utf-8">
+    <script type="text/javascript">
+    var host = "yoursite.com";
+    if ((host == window.location.host) && (window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     {% if site.google-site-verification %}
     <meta name="google-site-verification" content="{{ site.google-site-verification }}" />
