--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8">
     <script type="text/javascript">
-    var host = "yoursite.com";
+    var host = "quanyin.eu.org";
     if ((host == window.location.host) && (window.location.protocol != "https:"))
         window.location.protocol = "https";
     </script>
