--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,8 +8,8 @@
                     <li>
                         <a target="_blank" href="{{ "/feed.xml" | prepend: site.baseurl }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-rss fa-stack-1x fa-inverse"></em> 
                             </span>
                         </a>
                     </li>
@@ -18,8 +18,8 @@
                     <li>
                         <a target="_blank" href="//twitter.com/{{ site.twitter_username }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-twitter fa-stack-1x fa-inverse"></em> 
                             </span>
                         </a>
                     </li>
@@ -30,8 +30,8 @@
                     <li>
                         <a target="_blank" href="//www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-stack-1x fa-inverse">知</i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-stack-1x fa-inverse">知</em> 
                             </span>
                         </a>
                     </li>
@@ -40,8 +40,8 @@
                     <li>
                         <a target="_blank" href="//weibo.com/{{ site.weibo_username }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-weibo fa-stack-1x fa-inverse"></em> 
                             </span>
                         </a>
                     </li>
@@ -52,8 +52,8 @@
                     <li>
                         <a target="_blank" href="//www.facebook.com/{{ site.facebook_username }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-facebook fa-stack-1x fa-inverse"></em> 
                             </span>
                         </a>
                     </li>
@@ -62,8 +62,8 @@
                     <li>
                         <a target="_blank" href="//github.com/{{ site.github_username }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-github fa-stack-1x fa-inverse"></em> 
                             </span>
                         </a>
                     </li>
@@ -72,8 +72,8 @@
                     <li>
                         <a target="_blank" href="//www.linkedin.com/in/{{ site.linkedin_username }}">
                             <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                <em class="fa fa-circle fa-stack-2x"></em> 
+                                <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em> 
                             </span>
                         </a>
                     </li>
@@ -89,8 +89,8 @@
                     -->
                     <!-- 不蒜子计数 -->
                     {% if site.busuanzi %}                   
-                    <span id="busuanzi_container_site_uv" style='display:none'>   | 访客数: <span id="busuanzi_value_site_uv"><i class="fa fa-spinner fa-spin"></i></span></span>
-                    <span id="busuanzi_container_site_pv" style='display:none'>   | 总访问量: <span id="busuanzi_value_site_pv"><i class="fa fa-spinner fa-spin"></i></span></span>                  
+                    <span id="busuanzi_container_site_uv" style='display:none'>   | 访客数: <span id="busuanzi_value_site_uv"><em class="fa fa-spinner fa-spin"></em> </span></span>
+                    <span id="busuanzi_container_site_pv" style='display:none'>   | 总访问量: <span id="busuanzi_value_site_pv"><em class="fa fa-spinner fa-spin"></em> </span></span>                  
                     {% endif %}
                     <br>
                     <span class="text-center">Theme by <a href="//github.com/qytang326">Quanyin Tang</a> | 
@@ -283,7 +283,7 @@
 {% if site.back-to-top %}
 <div id="back-top">
   <a href="#section" data-toggle="tooltip" data-placement="top" title="top">
-  <i class="fa fa-chevron-up" aria-hidden="true"></i>
+  <em class="fa fa-chevron-up" aria-hidden="true"></em> 
   </a>
 </div>
 <!-- <script type="text/javascript" src="/Source/js/jquery.min.js"></script> -->
