--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -103,7 +103,7 @@ layout: default
                     <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
-                            <img src="{{site.sidebar-avatar}}" />
+                            <img src="{{site.sidebar-avatar}}" alt="sidebar-avatar" />
                         {% endif %}
                         {% if site.sidebar-about-description %}
                             <p>{{site.sidebar-about-description}}</p>
@@ -114,8 +114,8 @@ layout: default
                             <li>
                                 <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa fa-rss fa-stack-1x fa-inverse"></em>
                                     </span>
                                 </a>
                             </li>
@@ -124,8 +124,8 @@ layout: default
                             <li>
                                 <a href="//twitter.com/{{ site.twitter_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa fa-twitter fa-stack-1x fa-inverse"></em>
                                     </span>
                                 </a>
                             </li>
@@ -134,8 +134,8 @@ layout: default
                             <li>
                                 <a target="_blank" href="//www.zhihu.com/people/{{ site.zhihu_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa  fa-stack-1x fa-inverse">知</i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa  fa-stack-1x fa-inverse">知</em>
                                     </span>
                                 </a>
                             </li>
@@ -144,8 +144,8 @@ layout: default
                             <li>
                                 <a target="_blank" href="//weibo.com/{{ site.weibo_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa fa-weibo fa-stack-1x fa-inverse"></em>
                                     </span>
                                 </a>
                             </li>
@@ -154,8 +154,8 @@ layout: default
                             <li>
                                 <a target="_blank" href="//www.facebook.com/{{ site.facebook_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa fa-facebook fa-stack-1x fa-inverse"></em>
                                     </span>
                                 </a>
                             </li>
@@ -164,8 +164,8 @@ layout: default
                             <li>
                                 <a target="_blank" href="//github.com/{{ site.github_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa fa-github fa-stack-1x fa-inverse"></em>
                                     </span>
                                 </a>
                             </li>
@@ -174,8 +174,8 @@ layout: default
                             <li>
                                 <a target="_blank" href="//www.linkedin.com/in/{{ site.linkedin_username }}">
                                     <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                        <em class="fa fa-circle fa-stack-2x"></em>
+                                        <em class="fa fa-linkedin fa-stack-1x fa-inverse"></em>
                                     </span>
                                 </a>
                             </li>
