--- a/_includes/head.html
+++ b/_includes/head.html
@@ -131,7 +131,10 @@
     
     <!-- busuanzi -->
     {% if site.busuanzi %}
-    <script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>    
+	<!--
+	<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+	-->
+    <script async src="/js/busuanzi.pure.mini.js"></script>    
     {% endif %}
     
     <script></script>
