--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     {% if site.enforce_ssl %}
     <script type="text/javascript">
     var host = "{{site.enforce_ssl}}";
