--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
 
 <!-- Image to hack wechat -->
-<img src="/Source/images/icons/icon_wechat.png" width="0" height="0" alt="wechat icons"/>
+<img src="/Source/images/icons/icon_wechat.png" width="0" height="0" alt=" "/>
 <!-- Migrate from head to bottom, no longer block render and still work -->
 
 </body>
