--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -103,7 +103,7 @@ layout: default
                     <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
-                            <img src="{{site.sidebar-avatar}}" alt="sidebar-avatar" />
+                            <img src="{{site.sidebar-avatar}}" alt=" " />
                         {% endif %}
                         {% if site.sidebar-about-description %}
                             <p>{{site.sidebar-about-description}}</p>
