--- a/_includes/gitment.html
+++ b/_includes/gitment.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="//imsun.github.io/gitment/style/default.css">
 <script src="//imsun.github.io/gitment/dist/gitment.browser.js"></script>
 -->
-<link rel="stylesheet" href="/css/gitment.css">
-<script src="/js/gitment.js"></script>
+<link rel="stylesheet" href="/css/gitment.min.css">
+<script src="/js/gitment.min.js"></script>
 <script>
 var gitment = new Gitment({
   id: '{{ page.url | replace:'index.html',''| replace:'.html','' |split: "/" | last|downcase }}', // 页面ID，可选。默认为 location.href
