--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,6 @@
                     </li>
                     {% endif %}
 
-
                     {% if site.facebook_username %}
                     <li>
                         <a target="_blank" href="//www.facebook.com/{{ site.facebook_username }}">
@@ -99,11 +98,10 @@
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="50px" height="20px"
                         src="//ghbtns.com/github-btn.html?user={{site.github_username}}&repo={{site.repo}}&type=star&count=false" >
-                    </iframe>
-                    -->
-                    <a href="//github.com/qytang326/qytang326.github.io">
-                        <img src="/Source/images/icons/github-star.jpg" width="50px" height="20px" border="0" alt=" ">
-                    </a>
+                    </iframe> -->
+                        <a href="//github.com/qytang326/qytang326.github.io">
+                            <img src="/Source/images/icons/github-star.jpg" width="50px" height="20px" border="0" alt=" ">
+                        </a>
                     </span>
                     <br>
 					<span class="label label-primary label-md text-center"><strong>转载请标明作者和出处并告知</strong></span>
@@ -119,15 +117,15 @@
 
 <!-- Bootstrap Core JavaScript -->
 <!-- Currently, only navbar scroll-down effect at desktop still depends on this -->
-<script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
+<script async src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ "/js/Quanyin-blog.min.js" | prepend: site.baseurl }}"></script>
+<script async src="{{ "/js/Quanyin-blog.min.js" | prepend: site.baseurl }}"></script>
 
 <!-- Service Worker -->
 {% if site.service-worker %}
-<script src="{{ "/js/snackbar.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/js/sw-registration.min.js" | prepend: site.baseurl }}"></script>
+<script async src="{{ "/js/snackbar.min.js" | prepend: site.baseurl }}"></script>
+<script async src="{{ "/js/sw-registration.min.js" | prepend: site.baseurl }}"></script>
 {% endif %}
 
 <!-- async load function -->
@@ -152,15 +150,13 @@
      - //help.github.com/articles/creating-and-highlighting-code-blocks/
      - //github.com/jneen/rouge/wiki/list-of-supported-languages-and-lexers
 -->
+
 <!--
     <script>
-        async("//cdn.bootcss.com/highlight.js/8.6/highlight.min.js", function(){
-            hljs.initHighlightingOnLoad();
-        })
+        async("//cdn.bootcss.com/highlight.js/8.6/highlight.min.js", function(){hljs.initHighlightingOnLoad();})
     </script>
     <link href="//cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet">
 -->
-
 
 <!-- jquery.tagcloud.js -->
 <script>
@@ -183,7 +179,6 @@
         if($nav) FastClick.attach($nav);
     })
 </script>
-
 
 <!-- Side Catalog -->
 {% if site.catalog or page.catalog %}
@@ -240,13 +235,6 @@
         var pv_countOffset = 1995;  // 初始化首次数据
         var uv_countOffset = 326;  // 初始化首次数据
         function fixCount() {            
- /*           if (document.getElementById("busuanzi_container_site_pv").style.display != "none")
-            {
-                $("#busuanzi_value_site_pv").html(parseInt($("#busuanzi_value_site_pv").html()) + 11114); 
-                // alert('aaaaaaaaa');
-                clearInterval(int);
-            }          
- */         
             if ($("#busuanzi_container_site_pv").css("display") != "none")
             {
                 $("#busuanzi_value_site_pv").html(parseInt($("#busuanzi_value_site_pv").html()) + pv_countOffset); // 加上初始数据 
@@ -280,51 +268,101 @@
 
 <!-- daovoice -->
 {% if site.daovoice %}
-<script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//widget.daovoice.io/widget/f72737da.js","daovoice");</script>
-<!-- 非注册用户-->
-<script type="text/javascript">
-    daovoice('init', {
-      app_id: "{{ site.daovoice_appid }}",
-    });
-    daovoice('update');
-</script>
+    <script>(function(i,s,o,g,r,a,m){i["DaoVoiceObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//widget.daovoice.io/widget/f72737da.js","daovoice");</script>
+    <!-- 非注册用户-->
+    <script type="text/javascript">
+        daovoice('init', {
+          app_id: "{{ site.daovoice_appid }}",
+        });
+        daovoice('update');
+    </script>
 {% endif %}
 
 <!-- 页面点击小红心 -->
 {% if site.click-love %}
-<script type="text/javascript" src="/js/click-love.js"></script>
+    <script async type="text/javascript" src="/js/click-love.js" ></script>
 {% endif %}
 
 <!-- 动态背景-鼠标特效 --> <!--只能位于<body></body>之间-->
 {% if site.canvas-nest %}
-<!--  <script type="text/javascript" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script> -->
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/canvas-nest.js/1.0.1/canvas-nest.js"></script>
+    <!--  <script async type="text/javascript" src="//cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script> -->
+    <script async type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/canvas-nest.js/1.0.1/canvas-nest.js"></script>
 {% endif %}
 
-<!-- Back To Top -->
-{% if site.back-to-top %}
-<div id="back-top">
-  <a href="#section" data-toggle="tooltip" data-placement="top" title="top">
-  <em class="fa fa-chevron-up" aria-hidden="true"></em> 
-  </a>
-</div>
-<!-- <script type="text/javascript" src="/Source/js/jquery.min.js"></script> -->
-<script>
-	$('#back-top').hide();
-	$(document).ready(function () {
-	$(window).scroll(function () {
-    if ($(this).scrollTop() > 250) {
-      $('#back-top').fadeIn();
-    } else {
-      $('#back-top').fadeOut();
-    }
-  });
-  $('#back-top a').click(function () {
-    $('body,html').animate({
-      scrollTop: 0
-    }, 800);
-    return false;
-  });
-});
-</script>
-{% endif %} 
+<!-- Google Analytics -->
+{% if site.ga_track_id %}
+    <script>
+        // dynamic User by Quanyin
+        var _gaId = '{{ site.ga_track_id }}';
+        var _gaDomain = '{{ site.ga_domain }}';
+
+        // Originial
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', _gaId, _gaDomain);
+        ga('send', 'pageview');
+    </script>
+{% endif %}
+
+<!-- Baidu Tongji -->
+{% if site.ba_track_id %}
+    <script>
+        // dynamic User by Quanyin
+        var _baId = '{{ site.ba_track_id }}';
+        // Originial
+        var _hmt = _hmt || [];
+        (function() {
+          var hm = document.createElement("script");
+          hm.src = "//hm.baidu.com/hm.js?"+ _baId;
+          var s = document.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(hm,s);
+        })();
+    </script>
+{% endif %}
+
+<!-- 是否自动推送到到百度、360等以增加收录-->
+{% if site.push-for-include %}
+    <!-- 百度收录-->
+    {% if site.push-to-baidu %}
+        <script>
+        (function(){
+            var bp = document.createElement('script');
+            var curProtocol = window.location.protocol.split(':')[0];
+            if (curProtocol === 'https'){
+           bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+          }
+          else{
+          bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+          }
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bp,s);
+        })();
+        </script>
+    {% endif %}
+    <!-- 360收录-->
+    {% if site.push-to-360 %}
+        <script>
+        (function(){
+           var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?d7af82f5d5a7d431d4b53f4d0069f989":"https://jspassport.ssl.qhimg.com/11.0.1.js?d7af82f5d5a7d431d4b53f4d0069f989";
+           document.write('<script src="' + src + '" id="sozz"><\/script>');
+        })();
+        </script>
+    {% endif %}
+{% endif %}
+
+<!-- pageviews-->
+{% if site.hit-kounter %}
+    <script async src="//cdn1.lncld.net/static/js/av-min-1.5.0.js"></script>
+    <script async src="//jerry-cdn.b0.upaiyun.com/hit-kounter/hit-kounter-lc-0.3.0.js"></script>
+{% endif %}
+
+<!-- busuanzi -->
+{% if site.busuanzi %}
+<!--
+<script async src="//dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+-->
+    <script async src="/js/busuanzi.pure.mini.js"></script>    
+{% endif %}
