--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,8 +55,8 @@
     <noscript><link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}"></noscript>
     <link rel="preload" href="{{ "/css/Quanyin-blog.min.css" | prepend: site.baseurl }}" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="{{ "/css/Quanyin-blog.min.css" | prepend: site.baseurl }}"></noscript>
-    <link rel="preload" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"></noscript>
+    <link rel="preload" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"></noscript>
     <link rel="preload" href="/css/syntax.min.css" as="style" onload="this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="/css/syntax.min.css"></noscript>
     <script>
