--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -100,7 +100,7 @@
                         src="//ghbtns.com/github-btn.html?user={{site.github_username}}&repo={{site.repo}}&type=star&count=false" >
                     </iframe> -->
                         <a href="//github.com/qytang326/qytang326.github.io">
-                            <img src="/Source/images/icons/github-star.jpg" width="50px" height="20px" border="0" alt=" ">
+                            <img src="/Source/images/icons/github-star.jpg" width="50px" height="20px" border="0" alt=" " />
                         </a>
                     </span>
                     <br>
@@ -160,11 +160,11 @@
 
 <!-- jquery.tagcloud.js -->
 <script>
-    // only load tagcloud.js in tag.html
+    /* only load tagcloud.js in tag.html */
     if($('#tag_cloud').length !== 0){
         async('{{ "/js/jquery.tagcloud.min.js" | prepend: site.baseurl }}',function(){
             $.fn.tagcloud.defaults = {
-                //size: {start: 1, end: 1, unit: 'em'},
+                /* size: {start: 1, end: 1, unit: 'em'}, */
                 color: {start: '#bbbbee', end: '#0085a1'},
             };
             $('#tag_cloud a').tagcloud();
@@ -199,11 +199,11 @@
 
     generateCatalog(".catalog-body");
 
-    // toggle side catalog
+    /* toggle side catalog */
     $(".catalog-toggle").click((function(e){
         e.preventDefault();
         $('.side-catalog').toggleClass("fold")
-    }))
+    }));
 
     /*
      * Doc: //github.com/davist11/jQuery-One-Page-Nav
@@ -231,19 +231,19 @@
 {% if site.busuanzi and site.busuanzi_fixcount %}
 <script>
     $(document).ready(function() {
-        var int = setInterval(fixCount, 50);  // 50ms周期检测函数
-        var pv_countOffset = 1995;  // 初始化首次数据
-        var uv_countOffset = 326;  // 初始化首次数据
+        var int = setInterval(fixCount, 50);  /* 50ms周期检测函数 */
+        var pv_countOffset = 1995;  /* 初始化首次数据 */
+        var uv_countOffset = 326;  /* 初始化首次数据 */
         function fixCount() {            
             if ($("#busuanzi_container_site_pv").css("display") != "none")
             {
-                $("#busuanzi_value_site_pv").html(parseInt($("#busuanzi_value_site_pv").html()) + pv_countOffset); // 加上初始数据 
-                clearInterval(int); // 停止检测
+                $("#busuanzi_value_site_pv").html(parseInt($("#busuanzi_value_site_pv").html()) + pv_countOffset); /*加上初始数据 */ 
+                clearInterval(int); /* 停止检测 */
             }
             if ($("#busuanzi_container_site_uv").css("display") != "none")
             {
-                $("#busuanzi_value_site_uv").html(parseInt($("#busuanzi_value_site_uv").html()) + uv_countOffset); // 加上初始数据 
-                clearInterval(int); // 停止检测
+                $("#busuanzi_value_site_uv").html(parseInt($("#busuanzi_value_site_uv").html()) + uv_countOffset); /* 加上初始数据 */
+                clearInterval(int); /* 停止检测 */
             }                 
         }          	
     });
@@ -296,11 +296,11 @@
 {% if site.ga_track_id %}
     <script>
     window.onload=function(){
-        // dynamic User by Quanyin
+        /* dynamic User by Quanyin */
         var _gaId = '{{ site.ga_track_id }}';
         var _gaDomain = '{{ site.ga_domain }}';
 
-        // Originial
+        /* Originial */
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -315,9 +315,9 @@
 <!-- Baidu Tongji -->
 {% if site.ba_track_id %}
     <script>
-        // dynamic User by Quanyin
+        /* dynamic User by Quanyin */
         var _baId = '{{ site.ba_track_id }}';
-        // Originial
+        /* Originial */
         var _hmt = _hmt || [];
         (function() {
           var hm = document.createElement("script");
