--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -226,9 +226,9 @@ layout: default
 <script>
     async("//cdnjs.cloudflare.com/ajax/libs/anchor-js/1.1.1/anchor.min.js",function(){
         anchors.options = {
-          //visible: 'always',
+          /* visible: 'always', */
           placement: 'right',
-          //icon: '#'
+          /* icon: '#' */
         };
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
