--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -155,7 +155,7 @@
     <script>
         async("//cdn.bootcss.com/highlight.js/8.6/highlight.min.js", function(){hljs.initHighlightingOnLoad();})
     </script>
-    <link href="//cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/highlight.js/8.6/styles/github.min.css" rel="stylesheet" />
 -->
 
 <!-- jquery.tagcloud.js -->
