--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,7 +68,7 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:-->
     <!--[if lt IE 9]>
-        <script async src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script async src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script type="text/javascript" src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" async="async"></script>
+        <script type="text/javascript" src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" async="async"></script>
     <![endif]-->    
 </head>
