--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <!-- Image to hack wechat -->
-<!-- <img src="/Source/images/icons/icon_wechat.jpg" width="0" height="0"> -->
-<!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0"> -->
+<!-- <img src="/Source/images/icons/icon_wechat.jpg" width="0" height="0" alt=" " /> -->
+<!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0" alt=" " /> -->
 <!-- Post Header -->
 <style type="text/css">
     header.intro-header{
@@ -232,5 +232,5 @@ layout: default
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
 </script>
-<script type="text/javascript" async src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+<script type="text/javascript" async="async" src="//cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 {% endif %}
