--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <!-- Image to hack wechat -->
-<!-- <img src="/Source/images/icons/icon_wechat.jpg" width="0" height="0"> -->
-<!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0"> -->
+<!-- <img src="/Source/images/icons/icon_wechat.jpg" width="0" height="0" alt=" " /> -->
+<!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0"  alt=" " /> -->
 <!-- Post Header -->
 <style type="text/css">
     header.intro-header{
