--- a/_includes/gitment.html
+++ b/_includes/gitment.html
@@ -1,13 +1,13 @@
 {% if site.Gitment %}
 <div id="container"></div>
-<!--改为使用本地文件
+<!--改为使用本地文件 注意:不能异步加载gitment.js
 <link rel="stylesheet" href="//imsun.github.io/gitment/style/default.css" />
 <script type="text/javascript" src="//imsun.github.io/gitment/dist/gitment.browser.js" async="async"></script>
 <link rel="stylesheet" href="/css/gitment.min.css" />
 -->
 <link rel="preload" href="{{ "/css/gitment.min.css" | prepend: site.baseurl }}" as="style" onload="this.rel='stylesheet'" />
 <noscript><link rel="stylesheet" href="{{ "/css/gitment.min.css" | prepend: site.baseurl }}" /></noscript>
-<script  type="text/javascript" src="/js/gitment.min.js" async="async"></script>
+<script  type="text/javascript" src="/js/gitment.min.js" ></script>
 <script>
 var gitment = new Gitment({
   id: '{{ page.url | replace:'index.html',''| replace:'.html','' |split: "/" | last|downcase }}', /* 页面ID，可选。默认为 location.href */
