--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,7 +56,7 @@ layout: default
 				{{ content }}
                 
                 <p class="text-right">
-				<a href="{{page.author_homepage or site.homepage}}">{{ page.author }}</a>
+				<a href="{{page.author_homepage |default: site.homepage}}">{{ page.author }}</a>
 				<span class="time">
 				/
 				<time>{{ page.date | date:"%Y-%m-%d" }}</time>
