--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -79,19 +79,19 @@
                     {% endif %}
                 </ul>
         
-				<style>p.copyright.text-muted {color: #bfbfbf;} </style>
-				<p class="copyright text-muted text-center"><span class="text-center">
+                <style>p.copyright.text-muted {color: #bfbfbf;} </style>
+                <p class="copyright text-muted text-center"><span class="text-center">
                     Copyright &copy; 2017-{{ site.time | date: '%Y' }} <a href="{{site.homepage or site.url}}">Quanyin Blog</a>  
                     <!--
                     Powered by <a href="//github.com/mojombo/jekyll">Jekyll</a> and <a href="//getbootstrap.com/">Bootstrap</a>. 
-					<br>
+                    <br>
                     -->
                     <!-- 不蒜子计数 -->
                     {% if site.busuanzi %}                   
                     <span id="busuanzi_container_site_uv" style='display:none'>   | 访客数: <span id="busuanzi_value_site_uv"><em class="fa fa-spinner fa-spin"></em> </span></span>
                     <span id="busuanzi_container_site_pv" style='display:none'>   | 总访问量: <span id="busuanzi_value_site_pv"><em class="fa fa-spinner fa-spin"></em> </span></span>                  
                     {% endif %}
-                    <br>
+                    <br/>
                     <span class="text-center">Theme by <a href="//github.com/qytang326">Quanyin Tang</a> | 
                     <!--
                     <iframe 
@@ -104,7 +104,7 @@
                         </a>
                     </span>
                     <br>
-					<span class="label label-primary label-md text-center"><strong>转载请标明作者和出处并告知</strong></span>
+                    <span class="label label-primary label-md text-center"><strong>转载请标明作者和出处并告知</strong></span>
                 </p>
                 <p class="copyright text-muted" id="count">                
             </div>
@@ -425,3 +425,7 @@ $(document).ready(function () {
   });
 });
 </script>
+
+{% if site.tota11y %}
+<script type="text/javascript" async="async"src="//cdnjs.cloudflare.com/ajax/libs/tota11y/0.1.6/tota11y.min.js"></script>
+{% endif %}
